# beagle

./: .gitignore  ARM64_STRING_BUG.md  ASYNC_PLAN_V2.md  ASYNC_POLLING_FIX_PLAN.md  ASYNC_POLLING_FIX_RESULTS.md  BENCHMARK_COMPARISON.md  CONTINUATION_SEGMENTS.md  Cargo.toml  FRICTION_LOG.md  HANDLER_BUGS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MISSING_FEATURES.md  PERFORMANCE_ANALYSIS.md  README.md  STDLIB_PLAN.md  STREAMING_ARCHITECTURE.md  STREAM_API.md  STREAM_GUIDE.md  STREAM_IMPLEMENTATION.md  TODO.md  TOPLEVEL_FUNCTION_CALL_BUG.md  build.rs  claude.md  debug_commands.txt  debug_script.lldb  debug_session.txt  friction_log_fixes.md  log.txt  profile.json  test_adr.bg  test_simple_yield.bg
.ai-docs/: continuation-capture-plan.md
.cargo/: config.toml
benchmarks/: NETWORKING_BENCHMARKS.md  PERF_NOTES.md  run_benchmarks.sh
docs/: CONCURRENT_REDEFINE_OPEN_ISSUES.md  COOPERATIVE_SCHEDULER_LEAK_HANDOFF.md  FUTURE_WORK.md  GCRUST_ADOPTION.md  GC_REDEFINE_RACE_INVESTIGATION.md  GC_ROOT_SLOTS_PLAN.md  GC_STALE_ROOT_REDEFINE_BUG.md  NETWORKING_HANDOFF.md  NEXT_STEPS.md  OSR_DEFAULT_ON_HANDOFF.md  OSR_DESIGN.md  OSR_PERF_HANDOFF.md  PERF_NEXT_WORK.md  PRODUCTION_READINESS_BACKLOG.md  PROTOCOL_PLAN.md  PROTOCOL_REDEFINE_HANDOFF.md  REPL_CLIENT_DISCONNECT_CRASH.md  ROOT_SLOT_REUSE.md  SSA_ARCHITECTURE.md  SSA_PRESSURE_EXPLOSION.md  SSA_RUNTIME_PARITY_PLAN.md  SSA_STATE_AND_POSTMORTEM.md  STDLIB.md  STDLIB_API_CRITIQUE.md  STDLIB_ROADMAP.md  TIER2_OPTIMIZATION.md  api.html  api.md  ci-debug-repl-failures.md  continuation-approaches.md  continuation-stack-restoration.md  effect-handlers-handoff.md  exceptions-effects-plan.md  ffi-marshal-protocol.md  fixed-root-area-gc-design.md  gc-continuation-corruption-bug.md  gc-zero-field-struct-bug.md  language-guide.md  segmented-stack-handoff.md  segmented-stack-implementation-notes.md  (+3 more)
examples/: appkit_counter.bg  echo_server.bg  raylib_game.bg  raylib_game_changes.txt  raylib_game_crash_log.txt  raylib_game_crash_report.md  raylib_game_shooter_changes.txt  web_app_demo.bg  websocket_echo_demo.bg
notes/: thinking.md
resources/: HANDLER_BUGS.md  _tmp_cont_stack_long_read.bg  _tmp_cont_stack_many_writes.bg  _tmp_cont_stack_multi_line.bg  _tmp_cont_stack_sleep_loop.bg  anon_function_test.bg  ansi_coverage_test.bg  ansi_ext4_test.bg  apply_test.bg  arm64_string_bug.bg  array.bg  array_boundary_test.bg  array_destruct_manual.bg  array_destruct_simple.bg  array_gc_test.bg  array_index_boundary2_test.bg  array_index_boundary_test.bg  array_literals.bg  array_narrow_test.bg  array_nth_test.bg  array_rw_test.bg  array_size_overflow_bug.bg  array_size_test.bg  array_type_of_test.bg  async_ambient_main_test.bg  async_ambient_thread_test.bg  async_await_reject_cancel_test.bg  async_blocking_test.bg  async_dir_recursive_test.bg  atom.bg  (+715 more)
(+327 files in other folders)
