[package]
name = "main"
version = "0.1.0"
edition = "2024"
build = "build.rs"


[profile.release-with-debug]
inherits = "release"
debug = true
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# It would be great to get rid of all these dependencies
[dependencies]
mmap-rs = "0.6.1"
bincode =  { version = "2.0.0", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
cfg-if = "1.0.0"
libloading = "0.8.5"
libffi = "4.1.0"
libc = "0.2.169"
nanoserde = { version = "0.2.0-beta.0", features = ["json", "binary"] }



[features]
default = []
compacting = []
mark-and-sweep = []
generational = []
thread-safe = []
json = []
backend-arm64 = []
backend-x86-64 = []
backend-llvm = []
backend-cranelift = []
debug-gc = []
