[package]
name = "main"
version = "0.1.0"
edition = "2024"
build = "build.rs"
default-run = "main"


[profile.release-with-debug]
inherits = "release"
debug = true
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# It would be great to get rid of all these dependencies
[dependencies]
mmap-rs = "0.6.1"
bincode =  { version = "2.0.0", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
cfg-if = "1.0.0"
libloading = "0.8.5"
libc = "0.2.169"
nanoserde = { version = "0.2.0-beta.0", features = ["json", "binary"] }
usdt = "0.5"
rand = "0.8"



[features]
default = []
compacting = []
mark-and-sweep = []
generational = []
thread-safe = []
json = []
backend-arm64 = []
backend-x86-64 = []
backend-llvm = []
backend-cranelift = []
debug-gc = []
heap-dump = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"

[[bin]]
name = "heap_explorer"
path = "src/bin/heap_explorer.rs"
required-features = ["heap-dump"]
